Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13896

Reference leak in check for mr_forwarding

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      Bug introduced by:

      commit e2c41ebcc080566e1fbb891572d6e0852f021a74
      Author: Chris Horn <chris.horn@hpe.com>
      Date:   Tue May 26 13:47:50 2020 -0500
      
          LUS-8905 lnet: Allow router to forward to healthier NID
      

      We call lnet_nid2peerni_locked() to lookup the peer NI for the message originator. lnet_nid2peerni_locked() takes a reference on the peer NI that is never dropped.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: